--- a/public/css/snipets.css
+++ b/public/css/snipets.css
@@ -165,6 +165,11 @@ body{
 	--z-fixed: 100
 }
 
+/* .dataTable tbody tr td{
+	display:flex;
+	justify-content:center;
+} */
+
 *,
 ::before,
 ::after {
