--- a/public/css/snipets.css
+++ b/public/css/snipets.css
@@ -5,9 +5,9 @@
     --altura-subtracao: 150px; /* Definindo a altura a ser subtraída */
 }
 
-body{
+/* body{
 	overflow:hidden;
-}
+} */
 
 .periudos{
 	margin:10px;
