construção do backend do ano letivo

--- a/public/css/calendario.css
+++ b/public/css/calendario.css
@@ -21,7 +21,7 @@
     font-weight: bold;
     color: #818589;
     color: #fff;
-    background-color: #448cd6;
+    background-color: #234D9D;
 }
 .calendar .days .day_name:nth-child(7) {
     border: none;
